--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -102,7 +102,21 @@
         <dependency>
             <groupId>wicket</groupId>
             <artifactId>wicket</artifactId>
-            <version>2.0-SNAPSHOT</version>
+            <version>1.2.2</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>wicket</groupId>
+            <artifactId>wicket-spring</artifactId>
+            <version>1.2.2</version>
+            <type>jar</type>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>wicket</groupId>
+            <artifactId>wicket-extensions</artifactId>
+            <version>1.2.2</version>
             <type>jar</type>
             <scope>compile</scope>
         </dependency>
