--- a/senro-core/pom.xml
+++ b/senro-core/pom.xml
@@ -58,6 +58,11 @@
             <version>2.0</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-mock</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>ejb</artifactId>
             <version>3.0-public-draft-20060118</version>
@@ -65,6 +70,11 @@
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate</artifactId>
+            <version>3.2.0.ga</version>
+        </dependency>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-annotations</artifactId>
             <version>3.2.0.ga</version>
         </dependency>
         <dependency>
@@ -81,6 +91,11 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.2</version>
         </dependency>
     </dependencies>
     <reporting>
