--- a/pom.xml
+++ b/pom.xml
@@ -157,7 +157,7 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.1</version>
-            <scope>test</scope>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
