--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -156,8 +156,8 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.1</version>
-            <scope>compile</scope>
+            <version>3.8.1</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
