--- a/senro-core/pom.xml
+++ b/senro-core/pom.xml
@@ -108,6 +108,11 @@
             <version>1.8.0.7</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.1</version>
+        </dependency>
     </dependencies>
     <reporting>
         <plugins>
