--- a/trunk/senro-examples/senro-simple-example/pom.xml
+++ b/trunk/senro-examples/senro-simple-example/pom.xml
@@ -15,6 +15,12 @@
     <url>http://www.senro.org</url>
     <dependencies>
         <dependency>
+            <groupId>hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>1.8.0.7</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
             <groupId>org.senro</groupId>
             <artifactId>senro-core</artifactId>
             <version>0.5-SNAPSHOT</version>
