--- a/trunk/pom.xml
+++ b/trunk/pom.xml
@@ -138,6 +138,13 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.13</version>
+            <type>jar</type>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>wicket</groupId>
             <artifactId>wicket-spring</artifactId>
             <version>1.2.2</version>
