--- a/branches/senro-gxt/senro-designer/.classpath
+++ b/branches/senro-gxt/senro-designer/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/dt.jar"/>
 	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/jh.jar"/>
 	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/looks-1.3.1.jar"/>
+	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/log4j-1.2.15.jar"/>
+	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
