--- a/senro-designer/.classpath
+++ b/senro-designer/.classpath
@@ -11,5 +11,9 @@
 	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/commons-io-1.4.jar"/>
 	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/commons-lang-2.3.jar"/>
 	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/senro-core-1.0-M1.jar"/>
+	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/gwt-user.jar"/>
+	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/gxt.jar"/>
+	<classpathentry kind="lib" path="D:/workspaces/senro/senro-designer/lib/senro-client-1.0-M1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
