--- a/branches/senro-gxt/senro-designer/senro-core/.classpath
+++ b/branches/senro-gxt/senro-designer/senro-core/.classpath
@@ -5,13 +5,16 @@
 	<classpathentry kind="lib" path="lib/senro-core-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/senro-template-repository-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/spring-2.5.5.jar"/>
-	<classpathentry kind="lib" path="lib/senro-metadata-api-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/senro-metadata-reflection-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/senro-sid-1.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/gxt-2.0.jar"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.4.jar"/>
 	<classpathentry kind="lib" path="lib/log4j-1.2.14.jar"/>
 	<classpathentry kind="lib" path="lib/gwt-user-1.5.3.jar"/>
+	<classpathentry kind="lib" path="lib/shellos-metadata-common-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/sdo-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/ecore-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/common-2.4.0.jar"/>
+	<classpathentry kind="lib" path="lib/commonj-sdo-2.4.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
